# python-octaviaclient

./: .coveragerc  .gitignore  .gitreview  .pylintrc  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  __init__.py  bindep.txt  lower-constraints.txt  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
api/: constants.py
api/v2/: octavia.py
doc/: requirements.txt
doc/source/: conf.py  decoder.rst  index.rst  installation.rst  readme.rst  usage.rst
doc/source/_extra/: .htaccess
doc/source/cli/: index.rst
doc/source/cli/osc/v2/: load-balancer.rst
doc/source/data/: lbaas.csv
doc/source/install/: index.rst
doc/source/reference/: decoder.rst  index.rst
doc/source/reference/data/: lbaas.csv
doc/source/usage/osc/v2/: load-balancer.rst
hacking/: checks.py
octaviaclient/: __init__.py  version.py
octaviaclient/api/: constants.py  exceptions.py  load_balancer_v2.py
octaviaclient/api/v2/: octavia.py
octaviaclient/hacking/: checks.py
octaviaclient/osc/: plugin.py
octaviaclient/osc/v2/: amphora.py  availabilityzone.py  availabilityzoneprofile.py  constants.py  flavor.py  flavorprofile.py  health_monitor.py  l7policy.py  l7rule.py  listener.py  load_balancer.py  member.py  pool.py  provider.py  quota.py  utils.py  validate.py
octaviaclient/tests/: fakes.py  test_octaviaclient.py  utils.py
octaviaclient/tests/functional/: base.py
octaviaclient/tests/unit/: test_hacking.py
octaviaclient/tests/unit/api/: test_load_balancer.py  test_octavia.py
octaviaclient/tests/unit/osc/v2/: constants.py  fakes.py  test_amphora.py  test_availabilityzone.py  test_availabilityzoneprofile.py  test_flavor.py  test_flavorprofile.py  test_health_monitor.py  test_l7policy.py  test_l7rule.py  test_listener.py  test_load_balancer.py  test_member.py  test_pool.py  test_provider.py  test_quota.py  test_validations.py
osc/v2/: amphora.py  constants.py  health_monitor.py  l7policy.py  listener.py  quota.py
releasenotes/notes/: Add-PROMETHEUS-listener-protocol-23f5054f524d9332.yaml  Add-SR-IOV-support-for-members-5ed7f7877b17fb2a.yaml  Add-proxyv2-7a540796c60241c3.yaml  Add-support-for-UDP-5476caa65b1253a6.yaml  Add-unset-commands-15490df414a70df0.yaml  Add-vip_vnic_type-load-balancer-field-f1bc1345ee741f88.yaml  Client-to-request-JSON-responses-8d942dafca785c70.yaml  Improve-client-performance-when-using-a-name-instead-of-ID-51a6637050386a90.yaml  add-ability-set-listener-cipher-list-fe379d0d0821ed42.yaml  add-ability-set-pool-cipher-list-70128f983506fbdb.yaml  add-alpn-support-listeners-6508704b5c8944d2.yaml  add-amphora-configure-command-cda75053a72c0cdf.yaml  add-amphora-delete-0fe5f2097da92b5c.yaml  add-amphora-stats-show-48bc0fadf08f1057.yaml  add-amphorae-failover-suuport-9fa0b1c25026e123.yaml  add-az-and-profiles-ed79c945c4e0d418.yaml  add-flavor-support-75c6d5bec48b1d18.yaml  add-hsts-support-f612ec171e28a3b3.yaml  add-l7policy-and-l7rule-quota-support-73098a090b252901.yaml  add-lb-algorithm-source-ip-port-3e2d4b60f6916259.yaml  add-lb-flavor-b917faa0298c3a74.yaml  add-listener-allowed-cirds-2ef9fa2e1c650166.yaml  add-missing-flavor-set-description-option-d49f3103ef15e778.yaml  add-new-commands-and-options-d520b36d870cbcb4.yaml  add-pool-tls-alpn-support-59758ea78c78952e.yaml  add-provider-load-balancer-create-4d151209dee32f81.yaml  add-qos-policy-argument-1741126d759630da.yaml  add-quota-support-effed2cf2a8c7ad4.yaml  add-redirect-prefix-2f66455b3eacf5b6.yaml  add-support-for-provider-4e60045ea54f1d30.yaml  add-support-for-sctp-protocol-f23b58db8522cc4b.yaml  add-tag-support-01087c4b3c4360dc.yaml  add-tls-version-support-for-listeners-4a6a661af5f9de9a.yaml  add-tls-version-support-to-pools-852f02b034f436f9.yaml  add-tls-versions-ciphers-unsets-8d06a502c8ad38ff.yaml  add-vip-sg-id-22691a95cc8b3fc7.yaml  add-wait-option-to-CUD-commands-97375387e7762b83.yaml  add_backup_member_support-8b406bb72654ba88.yaml  add_loadbalancer_status_support-f960d89f1b77fd16.yaml  added-FAILOVER_STOPPED-status-to-amphora-status-filter-ec3517a363ac2654.yaml  (+18 more)
releasenotes/source/: conf.py  index.rst
tests/functional/: base.py
tests/unit/: test_hacking.py
tests/unit/osc/v2/: test_amphora.py  test_member.py  test_quota.py  test_validations.py
tools/: coding-checks.sh
zuul.d/: projects.yaml
