[metadata]
name = python-octaviaclient
summary = Octavia client for OpenStack Load Balancing
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/python-octaviaclient
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    octaviaclient

[entry_points]
openstack.cli.extension =
    load_balancer = octaviaclient.osc.plugin

openstack.load_balancer.v2 =
    loadbalancer_create = octaviaclient.osc.v2.load_balancer:CreateLoadBalancer
    loadbalancer_list = octaviaclient.osc.v2.load_balancer:ListLoadBalancer
    loadbalancer_show = octaviaclient.osc.v2.load_balancer:ShowLoadBalancer
    loadbalancer_delete = octaviaclient.osc.v2.load_balancer:DeleteLoadBalancer
    loadbalancer_set = octaviaclient.osc.v2.load_balancer:SetLoadBalancer
    loadbalancer_listener_create = octaviaclient.osc.v2.listener:CreateListener
    loadbalancer_listener_list = octaviaclient.osc.v2.listener:ListListener
    loadbalancer_listener_show = octaviaclient.osc.v2.listener:ShowListener
    loadbalancer_listener_delete = octaviaclient.osc.v2.listener:DeleteListener
    loadbalancer_listener_set = octaviaclient.osc.v2.listener:SetListener

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = octaviaclient/locale
domain = octaviaclient

[update_catalog]
domain = octaviaclient
output_dir = octaviaclient/locale
input_file = octaviaclient/locale/octaviaclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = octaviaclient/locale/octaviaclient.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source
