[metadata]
name = python-octaviaclient
summary = Octavia client for OpenStack Load Balancing
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/python-octaviaclient/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    octaviaclient

[entry_points]
openstack.cli.extension =
    load_balancer = octaviaclient.osc.plugin

openstack.load_balancer.v2 =
    loadbalancer_create = octaviaclient.osc.v2.load_balancer:CreateLoadBalancer
    loadbalancer_list = octaviaclient.osc.v2.load_balancer:ListLoadBalancer
    loadbalancer_show = octaviaclient.osc.v2.load_balancer:ShowLoadBalancer
    loadbalancer_delete = octaviaclient.osc.v2.load_balancer:DeleteLoadBalancer
    loadbalancer_set = octaviaclient.osc.v2.load_balancer:SetLoadBalancer
    loadbalancer_unset = octaviaclient.osc.v2.load_balancer:UnsetLoadBalancer
    loadbalancer_stats_show = octaviaclient.osc.v2.load_balancer:ShowLoadBalancerStats
    loadbalancer_status_show = octaviaclient.osc.v2.load_balancer:ShowLoadBalancerStatus
    loadbalancer_failover = octaviaclient.osc.v2.load_balancer:FailoverLoadBalancer
    loadbalancer_listener_create = octaviaclient.osc.v2.listener:CreateListener
    loadbalancer_listener_list = octaviaclient.osc.v2.listener:ListListener
    loadbalancer_listener_show = octaviaclient.osc.v2.listener:ShowListener
    loadbalancer_listener_delete = octaviaclient.osc.v2.listener:DeleteListener
    loadbalancer_listener_set = octaviaclient.osc.v2.listener:SetListener
    loadbalancer_listener_unset = octaviaclient.osc.v2.listener:UnsetListener
    loadbalancer_listener_stats_show = octaviaclient.osc.v2.listener:ShowListenerStats
    loadbalancer_pool_create = octaviaclient.osc.v2.pool:CreatePool
    loadbalancer_pool_list = octaviaclient.osc.v2.pool:ListPool
    loadbalancer_pool_show = octaviaclient.osc.v2.pool:ShowPool
    loadbalancer_pool_delete = octaviaclient.osc.v2.pool:DeletePool
    loadbalancer_pool_set = octaviaclient.osc.v2.pool:SetPool
    loadbalancer_pool_unset = octaviaclient.osc.v2.pool:UnsetPool
    loadbalancer_member_create = octaviaclient.osc.v2.member:CreateMember
    loadbalancer_member_list = octaviaclient.osc.v2.member:ListMember
    loadbalancer_member_show = octaviaclient.osc.v2.member:ShowMember
    loadbalancer_member_delete = octaviaclient.osc.v2.member:DeleteMember
    loadbalancer_member_set = octaviaclient.osc.v2.member:SetMember
    loadbalancer_member_unset = octaviaclient.osc.v2.member:UnsetMember
    loadbalancer_l7policy_create = octaviaclient.osc.v2.l7policy:CreateL7Policy
    loadbalancer_l7policy_list = octaviaclient.osc.v2.l7policy:ListL7Policy
    loadbalancer_l7policy_show = octaviaclient.osc.v2.l7policy:ShowL7Policy
    loadbalancer_l7policy_delete = octaviaclient.osc.v2.l7policy:DeleteL7Policy
    loadbalancer_l7policy_unset = octaviaclient.osc.v2.l7policy:UnsetL7Policy
    loadbalancer_l7policy_set = octaviaclient.osc.v2.l7policy:SetL7Policy
    loadbalancer_l7rule_create = octaviaclient.osc.v2.l7rule:CreateL7Rule
    loadbalancer_l7rule_list = octaviaclient.osc.v2.l7rule:ListL7Rule
    loadbalancer_l7rule_show = octaviaclient.osc.v2.l7rule:ShowL7Rule
    loadbalancer_l7rule_delete = octaviaclient.osc.v2.l7rule:DeleteL7Rule
    loadbalancer_l7rule_set = octaviaclient.osc.v2.l7rule:SetL7Rule
    loadbalancer_l7rule_unset = octaviaclient.osc.v2.l7rule:UnsetL7Rule
    loadbalancer_healthmonitor_create = octaviaclient.osc.v2.health_monitor:CreateHealthMonitor
    loadbalancer_healthmonitor_list = octaviaclient.osc.v2.health_monitor:ListHealthMonitor
    loadbalancer_healthmonitor_show = octaviaclient.osc.v2.health_monitor:ShowHealthMonitor
    loadbalancer_healthmonitor_delete = octaviaclient.osc.v2.health_monitor:DeleteHealthMonitor
    loadbalancer_healthmonitor_set = octaviaclient.osc.v2.health_monitor:SetHealthMonitor
    loadbalancer_healthmonitor_unset = octaviaclient.osc.v2.health_monitor:UnsetHealthMonitor
    loadbalancer_quota_list = octaviaclient.osc.v2.quota:ListQuota
    loadbalancer_quota_show = octaviaclient.osc.v2.quota:ShowQuota
    loadbalancer_quota_defaults_show = octaviaclient.osc.v2.quota:ShowQuotaDefaults
    loadbalancer_quota_reset = octaviaclient.osc.v2.quota:ResetQuota
    loadbalancer_quota_set = octaviaclient.osc.v2.quota:SetQuota
    loadbalancer_quota_unset = octaviaclient.osc.v2.quota:UnsetQuota
    loadbalancer_amphora_list = octaviaclient.osc.v2.amphora:ListAmphora
    loadbalancer_amphora_show = octaviaclient.osc.v2.amphora:ShowAmphora
    loadbalancer_amphora_configure = octaviaclient.osc.v2.amphora:ConfigureAmphora
    loadbalancer_amphora_failover = octaviaclient.osc.v2.amphora:FailoverAmphora
    loadbalancer_provider_list = octaviaclient.osc.v2.provider:ListProvider
    loadbalancer_provider_capability_list = octaviaclient.osc.v2.provider:ListProviderCapability
    loadbalancer_flavorprofile_create = octaviaclient.osc.v2.flavorprofile:CreateFlavorProfile
    loadbalancer_flavorprofile_list = octaviaclient.osc.v2.flavorprofile:ListFlavorProfile
    loadbalancer_flavorprofile_delete = octaviaclient.osc.v2.flavorprofile:DeleteFlavorProfile
    loadbalancer_flavorprofile_show = octaviaclient.osc.v2.flavorprofile:ShowFlavorProfile
    loadbalancer_flavorprofile_set = octaviaclient.osc.v2.flavorprofile:SetFlavorProfile
    loadbalancer_flavor_create = octaviaclient.osc.v2.flavor:CreateFlavor
    loadbalancer_flavor_list = octaviaclient.osc.v2.flavor:ListFlavor
    loadbalancer_flavor_delete = octaviaclient.osc.v2.flavor:DeleteFlavor
    loadbalancer_flavor_show = octaviaclient.osc.v2.flavor:ShowFlavor
    loadbalancer_flavor_set = octaviaclient.osc.v2.flavor:SetFlavor
    loadbalancer_flavor_unset = octaviaclient.osc.v2.flavor:UnsetFlavor
    loadbalancer_availabilityzoneprofile_create = octaviaclient.osc.v2.availabilityzoneprofile:CreateAvailabilityzoneProfile
    loadbalancer_availabilityzoneprofile_list = octaviaclient.osc.v2.availabilityzoneprofile:ListAvailabilityzoneProfile
    loadbalancer_availabilityzoneprofile_delete = octaviaclient.osc.v2.availabilityzoneprofile:DeleteAvailabilityzoneProfile
    loadbalancer_availabilityzoneprofile_show = octaviaclient.osc.v2.availabilityzoneprofile:ShowAvailabilityzoneProfile
    loadbalancer_availabilityzoneprofile_set = octaviaclient.osc.v2.availabilityzoneprofile:SetAvailabilityzoneProfile
    loadbalancer_availabilityzone_create = octaviaclient.osc.v2.availabilityzone:CreateAvailabilityzone
    loadbalancer_availabilityzone_list = octaviaclient.osc.v2.availabilityzone:ListAvailabilityzone
    loadbalancer_availabilityzone_delete = octaviaclient.osc.v2.availabilityzone:DeleteAvailabilityzone
    loadbalancer_availabilityzone_show = octaviaclient.osc.v2.availabilityzone:ShowAvailabilityzone
    loadbalancer_availabilityzone_set = octaviaclient.osc.v2.availabilityzone:SetAvailabilityzone
    loadbalancer_availabilityzone_unset = octaviaclient.osc.v2.availabilityzone:UnsetAvailabilityzone

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = octaviaclient/locale
domain = octaviaclient

[update_catalog]
domain = octaviaclient
output_dir = octaviaclient/locale
input_file = octaviaclient/locale/octaviaclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = octaviaclient/locale/octaviaclient.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source
